feature: Husky and lint-staged

--- a/paseri-docs/src/styles/custom.css
+++ b/paseri-docs/src/styles/custom.css
@@ -1,31 +1,31 @@
 /* Dark mode colors. */
 :root {
-	--sl-color-accent-low: #002d0f;
-	--sl-color-accent: #007f39;
-	--sl-color-accent-high: #9edaaa;
-	--sl-color-white: #ffffff;
-	--sl-color-gray-1: #edeeed;
-	--sl-color-gray-2: #c1c2c1;
-	--sl-color-gray-3: #898c8a;
-	--sl-color-gray-4: #565957;
-	--sl-color-gray-5: #363937;
-	--sl-color-gray-6: #252725;
-	--sl-color-black: #171818;
+    --sl-color-accent-low: #002d0f;
+    --sl-color-accent: #007f39;
+    --sl-color-accent-high: #9edaaa;
+    --sl-color-white: #ffffff;
+    --sl-color-gray-1: #edeeed;
+    --sl-color-gray-2: #c1c2c1;
+    --sl-color-gray-3: #898c8a;
+    --sl-color-gray-4: #565957;
+    --sl-color-gray-5: #363937;
+    --sl-color-gray-6: #252725;
+    --sl-color-black: #171818;
 }
 /* Light mode colors. */
-:root[data-theme='light'] {
-	--sl-color-accent-low: #b8e4c0;
-	--sl-color-accent: #00823a;
-	--sl-color-accent-high: #003e18;
-	--sl-color-white: #171818;
-	--sl-color-gray-1: #252725;
-	--sl-color-gray-2: #363937;
-	--sl-color-gray-3: #565957;
-	--sl-color-gray-4: #898c8a;
-	--sl-color-gray-5: #c1c2c1;
-	--sl-color-gray-6: #edeeed;
-	--sl-color-gray-7: #f6f6f6;
-	--sl-color-black: #ffffff;
+:root[data-theme="light"] {
+    --sl-color-accent-low: #b8e4c0;
+    --sl-color-accent: #00823a;
+    --sl-color-accent-high: #003e18;
+    --sl-color-white: #171818;
+    --sl-color-gray-1: #252725;
+    --sl-color-gray-2: #363937;
+    --sl-color-gray-3: #565957;
+    --sl-color-gray-4: #898c8a;
+    --sl-color-gray-5: #c1c2c1;
+    --sl-color-gray-6: #edeeed;
+    --sl-color-gray-7: #f6f6f6;
+    --sl-color-black: #ffffff;
 }
 
 .title-wrapper {
@@ -41,7 +41,8 @@
     outline-color: var(--sl-color-accent);
 }
 
-summary, li a {
+summary,
+li a {
     margin-top: 0.2em;
     margin-bottom: 0.2em;
 }
